fazendo merge dos arquivos do docker

--- a/rhecruta-java/Dockerfile
+++ b/rhecruta-java/Dockerfile
@@ -1,4 +1,4 @@
-FROM payara/server-web
+FROM payara/server-full
 ENV APPNAME rhecruta
 ENV DOMAIN domain1
 ENV AUTODEPLOY ${PAYARA_PATH}/glassfish/domains/${DOMAIN}/autodeploy/
